<resources>
    <string name="app_name_register">Registration</string>
    <string name="app_name_markqr">Mark QR</string>
    <string name="app_name_eventname">Events</string>

    <string name="Winners">Winners List</string>
    <string name="project">Project Display</string>
    <string name="Connections">Connections</string>
    <string name="codears">Code wars</string>
    <string name="trespassers">Trespassers</string>
    <string name="Googleit">Google it</string>
    <string name="Homicide">Homicide</string>
    <string name="PrisonBreak">Prison Break</string>
    <string name="Maathiyosi">Maathi Yosi</string>
    <string name="Midcity">Midcity Madness</string>
    <string name="technical_events">Technical Events</string>
    <string name="non_technical_events">Non-Technical Events</string>
    <string name="first_prize">First Prize -</string>
    <string name="second_prize">Second Prize -</string>
    <string name="third_prize">Third Prize -</string>
    <string name="Winner">Winner goes here</string>
    <string name="homicie">Homicide</string>
    <string name="mathi">Maathi Yosi</string>
    <string name="midcity">Midcity Madness</string>
    <string name="connections">Connections</string>
    <string name="Google_it">Google it</string>
    <string name="ChooseWinners">Choose Winners</string>
    <string name="contentforscaanactivity">Tap the button to Scan the Participant. Hit Participate in the next Screen to add.</string>
    <string name="event_name">Event name</string>
    <string name="scan_qr">Scan QR</string>
    <string name="add_participant">Add Participant</string>
    <string name="View_participant">view participants</string>
    <string name="members_5">Members = 5</string>
    <string name="zerocount">Yet to begin.</string>
    <string name="noofparticipants">No of Participants</string>
    <string name="p">Participants</string>
    <string name="m" />
    <string name="Loading">Loading…</string>
    <string name="zerocountparticipants">Yet To Begin.</string>
    <string name="NoofParticipants">No of Participants :</string>
    <string name="referral_page">Referral Page</string>
    <string name="PromotionalKing">Promotions </string>
    <string name="referral">Promotions Winner</string>
    <string name="app_name_referral">Referral App</string>
    <string name="app_name_incharge">Volunteers</string>
    <string name="app_name_admin">Admin</string>
    <string name="internet_error">Internet Error</string>
    <string name="internet_error_long">Please Connect to Wifi or Turn on Mobile Internet</string>
    <string name="help_register">Help?</string>
    <string name="surehelp">Are you sure want to call Arun? </string>
    <string name="mar_qr_registration_desk_2">Mark QR </string>
    <string name="type_phone_number">Type Phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="verify">Verify</string>
    <string name="mark_qr">Mark QR</string>
    <string name="kr">KR-</string>
    <string name="submit">Submit</string>
    <string name="image_for_lion">Image for lion</string>
    <string name="kratos_id">Kratos ID</string>
    <string name="student_ambassador_id">Student Ambassador ID</string>
    <string name="appforarun">Arun</string>
    <string name="volunteers">Volunteers</string>
    <string name="qrcode">qrcode</string>
    <string name="participants">Participants</string>
    <string name="total">Total Registered :</string>

    <string name="paper_presentation">Paper Presentation</string>
    <string name="clash_of_codes">Clash of Codes</string>
    <string name="tech_treasure_hunt">Tech Treasure Hunt</string>
    <string name="dead_locked_db">Dead Locked DB</string>
    <string name="google_it">Google it</string>
    <string name="gadgets_and_gizmos">Gadgets and Gizmos</string>


    <string name="murder_in_multiplayer">Murder in Multiplayer</string>
    <string name="pitch_impossible">Pitch Impossible</string>
    <string name="comic_quiz">Comic Quiz</string>
    <string name="gaming">Gaming</string>
    <string name="box_cricket_futsal">Box Cricket-Futsal</string>
    <string name="prison">Prison Break</string>
    <string name="select_event">Select Event</string>
    <string name="loading">Loading...Events</string>

</resources>
