<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kratos18.kratos2k18.SelectEvent">

    <TextView
        android:id="@+id/tv_tv_selectevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Select Event"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tv_selectevent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/technical_events"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />



        <RadioGroup
android:id="@+id/rg_events"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rb_paperpresentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paper_presentation" />

            <RadioButton
                android:id="@+id/rb_clash_of_codes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clash_of_codes" />

            <RadioButton
                android:id="@+id/rb_tech_treasure_hunt"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tech_treasure_hunt" />

            <RadioButton
                android:id="@+id/rb_dead_locked_db"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead_locked_db" />


            <RadioButton
                android:id="@+id/rb_googleit"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_it" />

            <RadioButton
                android:id="@+id/rb_gadgets_gizmos"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gadgets_and_gizmos" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/non_technical_events"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/rb_murder_in_multiplayer"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/murder_in_multiplayer" />

            <RadioButton
                android:id="@+id/rb_prisonbreak"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrisonBreak" />

            <RadioButton
                android:id="@+id/rb_pitch_impossible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pitch_impossible" />

            <RadioButton
                android:id="@+id/rb_comic_quiz"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comic_quiz" />



            <RadioButton
                android:id="@+id/rb_box_cricket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box_cricket_futsal" />

            <RadioButton
                android:id="@+id/rb_gaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gaming" />

        </RadioGroup>


    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:id="@+id/btn_selecteventbtn"
        android:layout_marginTop="20dp"
        android:text="Go!" />

</RelativeLayout>
