<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kratos18.kratos2k18.WinnersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWinnersTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Winners"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:id="@+id/teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"

            android:weightSum="2">


            <LinearLayout
                android:id="@+id/Technicalevents"
                android:layout_width="0dp"

                android:layout_height="match_parent"

                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvtvtechnical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/technical_events"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvtvpaperpresentation"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/paper_presentation"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvclashofcodes"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/clash_of_codes"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvtechtreasurehunt"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tech_treasure_hunt"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvdeadlockeddb"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dead_locked_db"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvGoogleit"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/google_it"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvGadgetsandgizmo"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gadgets_and_gizmos"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/NonTechnicalevents"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvtvnontechnical"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/non_technical_events"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvtvmurderinmultiplayer"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/murder_in_multiplayer"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvprisonbreak"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/PrisonBreak"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvpitchimpossible"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pitch_impossible"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvcomicquiz"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/comic_quiz"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvboxcricket"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/box_cricket_futsal"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvtvgaming"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gaming"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/tvevent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="Event"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


        <RelativeLayout
            android:id="@+id/rl_winners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">


            <TextView

                android:id="@+id/tvfp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvtvfp"


                android:text="@string/Winner"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tvsp"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@id/tvtvfp"
                android:layout_toEndOf="@id/tvtvsp"
                android:layout_toRightOf="@id/tvtvsp"

                android:text="@string/Winner"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tvtp"


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvtvsp"
                android:layout_toRightOf="@id/tvtvtp"
                android:text="@string/Winner"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tvtvfp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_prize"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtvsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvtvfp"
                android:text="@string/second_prize"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtvtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvtvsp"
                android:text="@string/third_prize"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


        </RelativeLayout>

        <TextView
            android:id="@+id/totalcount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Total Count"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold"

            />


    </LinearLayout>

</RelativeLayout>
